# quick-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWidget.ui  README.md  main.cpp  pub_handle.cpp  pub_handle.h  shortkey.cpp  shortkey.h  shortkey.ui  template.qrc
src/: config.cpp  config.h  project_opr.cpp  project_opr.h
template/: .gitignore  launch.vs.json  settings-clang.json  settings-gnu.json  settings-msvc.json
template/boost/: CMakeLists.txt  main.cpp
template/common/: CMakeLists.txt  main.cpp
template/qt/: CMakeLists.txt
